--- a/databaseadmin/templates/base.html
+++ b/databaseadmin/templates/base.html
@@ -35,5 +35,6 @@
         {% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
