--- a/databaseadmin/templates/home.html
+++ b/databaseadmin/templates/home.html
@@ -17,7 +17,7 @@
                     Экспортируйте таблицы базы данных в формате CSV.
                 </p>
                 <div class="list-group">
-                    <a href="{% url 'export_single_table' 'Product' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <a href="{% url 'export_single_table' 'products' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         <div>
                             <i class="fas fa-box"></i> Продукты
                             <small class="text-muted d-block">Экспорт в CSV</small>
@@ -26,7 +26,7 @@
                             <i class="fas fa-download"></i>
                         </span>
                     </a>
-                    <a href="{% url 'export_single_table' 'Attribute' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <a href="{% url 'export_single_table' 'attributes' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         <div>
                             <i class="fas fa-tags"></i> Атрибуты
                             <small class="text-muted d-block">Экспорт в CSV</small>
@@ -35,7 +35,7 @@
                             <i class="fas fa-download"></i>
                         </span>
                     </a>
-                    <a href="{% url 'export_single_table' 'TimeSeries' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <a href="{% url 'export_single_table' 'time_series' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         <div>
                             <i class="fas fa-chart-line"></i> Временные ряды
                             <small class="text-muted d-block">Экспорт в CSV</small>
@@ -44,7 +44,7 @@
                             <i class="fas fa-download"></i>
                         </span>
                     </a>
-                    <a href="{% url 'export_single_table' 'Timestamp' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <a href="{% url 'export_single_table' 'timestamps' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         <div>
                             <i class="fas fa-clock"></i> Таймстемпы
                             <small class="text-muted d-block">Экспорт в CSV</small>
