--- a/databaseadmin/templates/base.html
+++ b/databaseadmin/templates/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Django Upload Site</title>
+    {% load static %}
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
